[build-system]
requires = ["scikit-build-core==0.9.6", "nanobind==2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mre"
version = "1.0.0"
dependencies = [ "numpy>=1.26.4" ]

[tool.scikit-build]
build-dir = "build"
wheel.py-api = "cp312"
cmake.version = "==3.29.6"
cmake.build-type = "Debug"
cmake.verbose = true
